--- a/AlotOfCities.xcodeproj/xcshareddata/xcschemes/AlotOfCitiesTests.xcscheme
+++ b/AlotOfCities.xcodeproj/xcshareddata/xcschemes/AlotOfCitiesTests.xcscheme
@@ -14,7 +14,8 @@
       codeCoverageEnabled = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7179D8BA25C5916500A56A83"
